...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PQh-XY-hQf">
                                <rect key="frame" x="16" y="60" width="185" height="40"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5og-eI-xrV">
                                <rect key="frame" x="16" y="176" width="185" height="28"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Salary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pz8-qH-Uiz">
                                <rect key="frame" x="16" y="275" width="185" height="28"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter employee full name." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ips-2D-McS">
                                <rect key="frame" x="16" y="108" width="382" height="45.5"/>
                                <color key="backgroundColor" name="textFieldBackgroundColour"/>
                                <accessibility key="accessibilityConfiguration" identifier="nameTextField">
                                    <accessibilityTraits key="traits" none="YES"/>
                                    <bool key="isElement" value="YES"/>
...
                                <rect key="frame" x="16" y="207" width="382" height="45.5"/>
                                <color key="backgroundColor" name="textFieldBackgroundColour"/>
                                <accessibility key="accessibilityConfiguration" identifier="ageTextField">
                                    <accessibilityTraits key="traits" none="YES"/>
                                </accessibility>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter employee salary in rupees." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LZM-G0-qdR">
                                <rect key="frame" x="16" y="304" width="382" height="45.5"/>
                                <color key="backgroundColor" name="textFieldBackgroundColour"/>
                                <accessibility key="accessibilityConfiguration" identifier="salaryTextField"/>
                                <color key="textColor" name="grayTextColour"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
...
                                </accessibility>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                <state key="normal" title="Create">
                                    <color key="titleColor" name="textColour"/>
                                </state>
...
