...
}


class AgeValidator: ValidatorConvertible {
    func validated(_ value: String) throws -> String {
        guard value.count > 0 else {throw ValidationError("Age is required")}
        guard let age = Int(value) else {throw ValidationError("Age must be a number!")}
        guard value.count < 3 else {throw ValidationError("Invalid age number!")}
        guard age >= 21 else {throw ValidationError("You have to be over 21 years old :)")}
        return value
    }
}

...
    }
}

struct EmployeeNameValidator: ValidatorConvertible {
    func validated(_ value: String) throws -> String {
        guard value.count >= 4 else {
            throw ValidationError("Employee name must contain more than four characters" )
        }
        guard value.count < 25 else {
            throw ValidationError("Employee name shoudn't conain more than 25 characters" )
        }
        
        do {
...
